added update button for monitor

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <input type="text" value="0" class="start" name="start" />
         <label for="length">Length: $</label>
         <input type="text" value="ff" class="length" name="length" />
+        <input type="button" value="Update" class="updateButton" />
       </div>
       <div class="monitor"><pre><code></code></pre></div>
       <div class="messages"><pre><code></code></pre></div>
