Added unparser to emulator

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <label for="length">Length: $</label>
         <input type="text" value="ff" class="length" name="length" />
         <input type="button" value="Update" class="updateButton" />
+
+        <label for="unparser">Unparser: $</label>
+        <input type="text" value="0" class="unparser" name="unparser" />
+		<label class="unparserOutput" />
       </div>
       <div class="monitor"><pre><code></code></pre></div>
       <div class="messages"><pre><code></code></pre></div>
